# Alden-Finder

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: retailer-suggestion.yml
.github/workflows/: alerts.yml  ci.yml  scrape.yml  seed.yml
.streamlit/: config.toml  secrets.toml.example
alden_finder/: __init__.py  app.py
alden_finder/adapters/: alden_sf.py  aldenmadison.py  aldenshop.py  armoury.py  base.py  bureau_belfast.py  ealdwine.py  j_gilbert.py  leffot.py  oconnells.py  sherman_brothers.py  shoemart.py
alden_finder/alerts/: __init__.py  mailer.py  matcher.py  worker.py
alden_finder/core/: db.py  fx.py  models.py  normalize.py
alden_finder/scraping/: robots.py  runner.py
alden_finder/scripts/: check_supabase.py
alden_finder/ui/: alerts.py  cards.py  filters.py  guide.py  home.py  status.py  style.py
data/: colors.yaml  lasts.yaml  leathers.yaml  retailers.yaml
db/: schema.sql
db/migrations/: 001_unique_sku.sql
docs/: DEPLOY.md
tests/: test_alerts.py  test_db_search.py  test_normalize.py  test_registry.py  test_shopify_adapter.py
tests/fixtures/: shopify_sample.json
